[gd_scene load_steps=19 format=2]

[ext_resource path="res://Ttf/07x5-regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Sprites/Tutorial1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/pointer/pointerR.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Tutorial5.png" type="Texture" id=4]
[ext_resource path="res://Sprites/pointer/pointerL_pressed.png" type="Texture" id=5]
[ext_resource path="res://Sprites/pointer/pointerR_pressed.png" type="Texture" id=6]
[ext_resource path="res://Sprites/pointer/pointerL.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Tutorial2.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Tutorial3.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Tutoria4.png" type="Texture" id=11]
[ext_resource path="res://Scripts/Tutorial1.gd" type="Script" id=12]

[sub_resource type="DynamicFont" id=1]
size = 37
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 56
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 90
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 42
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 50
font_data = ExtResource( 1 )

[node name="Tutorial1" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.28003
margin_top = -1.25992
margin_right = 3.28003
margin_bottom = -1.25989
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1273.29, 697.523 )
scale = Vector2( 0.78874, 0.772079 )
texture = ExtResource( 2 )

[node name="Label4" type="Label" parent="Sprite"]
margin_left = 287.676
margin_top = -640.29
margin_right = 538.676
margin_bottom = -603.29
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Use an item"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="Sprite"]
margin_left = 306.414
margin_top = -540.747
margin_right = 622.414
margin_bottom = -503.747
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Raise an item"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="Sprite"]
margin_left = 305.225
margin_top = -305.424
margin_right = 715.225
margin_bottom = -268.424
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Change weapons"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label7" type="Label" parent="Sprite"]
margin_left = -626.761
margin_top = 231.833
margin_right = -244.761
margin_bottom = 268.833
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Press"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label8" type="Label" parent="Sprite"]
margin_left = -622.957
margin_top = 485.693
margin_right = -240.957
margin_bottom = 522.693
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Press"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label9" type="Label" parent="Sprite"]
margin_left = -285.71
margin_top = 485.693
margin_right = 96.2897
margin_bottom = 522.693
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "After"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label10" type="Label" parent="Sprite"]
margin_left = -301.916
margin_top = 231.833
margin_right = 80.0842
margin_bottom = 268.833
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Before"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Sprite"]
margin_left = -36.5428
margin_top = -558.983
margin_right = 107.457
margin_bottom = -521.983
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Shoot"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Sprite"]
margin_left = -482.109
margin_top = -547.745
margin_right = -329.109
margin_bottom = -510.745
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Walk"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sprite"]
margin_left = -135.293
margin_top = -712.416
margin_right = 840.707
margin_bottom = -559.416
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Control "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label11" type="Label" parent="Sprite"]
margin_left = 241.978
margin_top = 158.867
margin_right = 1217.98
margin_bottom = 367.867
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "The character 
  shoots in the
       direction 
         he looks"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label12" type="Label" parent="Sprite"]
margin_left = 251.395
margin_top = 416.844
margin_right = 1227.4
margin_bottom = 625.844
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "The character 
  shoots in the 
   direction he 
            goes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchScreenButton2" type="TouchScreenButton" parent="."]
position = Vector2( 1934.94, 517.796 )
scale = Vector2( 0.288948, 0.24844 )
normal = ExtResource( 3 )
pressed = ExtResource( 6 )

[node name="TouchScreenButton3" type="TouchScreenButton" parent="."]
position = Vector2( 138.132, 530.457 )
scale = Vector2( 0.321669, 0.256699 )
normal = ExtResource( 8 )
pressed = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 1267.36, 698.186 )
scale = Vector2( 0.786443, 0.767294 )
texture = ExtResource( 9 )

[node name="Label" type="Label" parent="Sprite2"]
margin_left = -272.131
margin_top = -554.09
margin_right = 1340.87
margin_bottom = -439.09
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "A classic zombie. He has 
                 only 1 hp."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Sprite2"]
margin_left = -276.432
margin_top = -399.998
margin_right = 1336.56
margin_bottom = -284.998
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "A zombie who has brains. 
           He has a lot of hp."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Sprite2"]
margin_left = -215.423
margin_top = -224.009
margin_right = 1397.58
margin_bottom = -109.009
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "The same zombie, but 
 without a T-shirt :)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Sprite2"]
margin_left = -261.144
margin_top = -34.6286
margin_right = 1351.85
margin_bottom = 80.3714
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "A fat zombie. He's slow, 
 but he has a lot of hp."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="Sprite2"]
margin_left = -235.184
margin_top = 141.7
margin_right = 1377.81
margin_bottom = 256.7
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "A zombie who shoots 
            its spines."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="Sprite2"]
margin_left = -191.537
margin_top = 337.413
margin_right = 1421.46
margin_bottom = 452.413
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "An exploding zombie."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label7" type="Label" parent="Sprite2"]
margin_left = -101.518
margin_top = 498.305
margin_right = 1511.48
margin_bottom = 613.305
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "A zombie boss."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label8" type="Label" parent="Sprite2"]
margin_left = -342.111
margin_top = -689.689
margin_right = 400.889
margin_bottom = -619.689
custom_fonts/font = SubResource( 4 )
text = "Types of zombies"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite3" type="Sprite" parent="."]
visible = false
position = Vector2( 1269.53, 698.464 )
scale = Vector2( 0.791268, 0.769071 )
texture = ExtResource( 10 )

[node name="Label" type="Label" parent="Sprite3"]
margin_left = -628.971
margin_top = -400.809
margin_right = 686.029
margin_bottom = -310.809
custom_fonts/font = SubResource( 5 )
text = "The game has two modes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Sprite3"]
margin_left = -612.496
margin_top = 287.285
margin_right = 4190.5
margin_bottom = 599.285
custom_fonts/font = SubResource( 6 )
text = "If you pass 12 waves, 
   you will get a super 
   attack. This super
 attack destroys all 
the zombies that are 
on the screen at the 
                moment."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Sprite3"]
margin_left = 49.5404
margin_top = 289.602
margin_right = 4852.54
margin_bottom = 601.602
custom_fonts/font = SubResource( 6 )
text = "       How many waves 
	      can you handle?) 
	  Every fourth wave,
you need to complete 
                a task."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite5" type="Sprite" parent="."]
visible = false
position = Vector2( 1276.95, 686.078 )
scale = Vector2( 0.795563, 0.780849 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="Sprite5"]
margin_left = -150.196
margin_top = -552.096
margin_right = 712.804
margin_bottom = -502.096
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Pointer towards the castle"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Sprite5"]
margin_left = -150.79
margin_top = -346.565
margin_right = 738.21
margin_bottom = -296.565
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Pointer  towards  the zombie"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Sprite5"]
margin_left = -149.533
margin_top = -151.905
margin_right = 739.467
margin_bottom = -101.905
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Pointer  towards  the zombie"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Sprite5"]
margin_left = -107.689
margin_top = 109.67
margin_right = 616.311
margin_bottom = 265.67
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "   The gun. You can use
grenades with this gun 
            in your hands."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="Sprite5"]
margin_left = -125.658
margin_top = 297.786
margin_right = 3286.34
margin_bottom = 506.786
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "  The baseball bat. You can 
 crash thebarricades and 
    kill zombies with its halp."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="Sprite5"]
margin_left = -138.625
margin_top = 489.247
margin_right = 3273.37
margin_bottom = 698.247
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "    Hands. You can't use
       weapons with them, 
but you can move faster."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 1278.22, 682.774 )
scale = Vector2( 0.817208, 0.791717 )
texture = ExtResource( 11 )

[connection signal="released" from="TouchScreenButton2" to="." method="_on_TouchScreenButton2_released"]
[connection signal="released" from="TouchScreenButton3" to="." method="_on_TouchScreenButton3_released"]
